--- a/_posts/2022-10-27-hugghub.md
+++ b/_posts/2022-10-27-hugghub.md
@@ -1,12 +1,63 @@
 ---
 layout: post
-title: Publishing yolov7 to hugginface model hub
+title: How to upload and version your model files using github
 date: 2022-10-27 15:12
-summary: Take yolov7 pretrained object detection model from github and making it available in hugginface model hub to use with transformers.
-categories: Computer Vision, Deep Learning, Transformers
+summary: Model files are usually larger than 100MB filesize allowed by github, this tutorial will show you how to upload your large model file to github with versioning using git lfs.
+categories: Model versioning, Deep learning, Git
 ---
 
-## How did I take yolov7 model and published it to huggingface.
+## How to upload and version your model files using github
+
+<img title="a title" alt="LFS" src="https://i.imgur.com/O90EuP2.jpg">
 
 
-In this tutorial I am going to illustrate how I will publish yolov7 model to the huggingface model hub
+In this tutorial I am going to illustrate how you can upload files larger than 100MB to github. Even though this tutorial is focused on storing large model files, you can use the same techniques to upload your audio, video, datasets and graphics using git.
+
+Prerequisites:
+Latest version of git should be installed. You can download it from
+https://git-scm.com/.
+
+Step 1:
+Install Git LFS (this activity is only required once)
+
+```bash
+git lfs install
+```
+
+Step 2:
+tell git lfs which are the files that needs to be tracked. In our case we need to track the pytorch model file(s) with extension ".pt" Either you can directly edit .gitattributes as below.
+
+```gitattributes
+# Model files
+*.pt filter=lfs diff=lfs merge=lfs -text
+*.pth filter=lfs diff=lfs merge=lfs -text
+```
+
+
+So here I've added *.pt and *.pth file extension for pytorch model file types I want to be controlled by Git LFS. The options added in the line tells git that I want to filter, diff and merge using the LFS tool and finally the -text argument tells Git that this is not a text file, which i think is a weird way to tell it that it's a binary file.
+
+or you can use the following git lfs command to do the same.
+
+```bash
+git lfs track "*.pt"
+```
+Make sure to track .gitattributes so that the changes are reflecting in your repo.
+
+git add .gitattributes
+
+```
+git add .gitattributes
+```
+
+Please note that adding a file type to be tracked by git lfs doesn't mean that all 
+the pre-existing files with that type that are already commited will be tracked. Use **git lfs migrate** to migrate those files to LFS. This is strange as we naturally expect git lfs to start tracking all the files in the repo with the given extension. Hope this will be updated in the future.
+
+Step 3:
+Once you add the files to be tracked you can continue adding. commiting and pushing changes to git as you would normally do.
+
+```bash
+git add model.pt
+git commit -m "Add model file"
+git push origin main
+```
+
