--- a/_posts/2022-10-27-hugghub.md
+++ b/_posts/2022-10-27-hugghub.md
@@ -11,20 +11,20 @@ categories: Model versioning, Deep learning, Git
 <img title="a title" alt="LFS" src="https://i.imgur.com/O90EuP2.jpg">
 
 
-In this tutorial I am going to illustrate how you can upload files larger than 100MB to github. Even though this tutorial is focused on storing large model files, you can use the same techniques to upload your audio, video, datasets and graphics using git.
+In this tutorial I am going to illustrate how you can upload model files larger than 100MB to github with versioning. Even though this tutorial is focused on storing large model files, you can use the same techniques to upload your audio, video, datasets and graphics using git.
 
-Prerequisites:
+>Prerequisites:
 Latest version of git should be installed. You can download it from
-https://git-scm.com/.
+[this link](https://git-scm.com/)
 
-Step 1:
+### Step 1:
 Install Git LFS (this activity is only required once)
 
 ```bash
 git lfs install
 ```
 
-Step 2:
+### Step 2:
 tell git lfs which are the files that needs to be tracked. In our case we need to track the pytorch model file(s) with extension ".pt" Either you can directly edit .gitattributes as below.
 
 ```gitattributes
@@ -52,7 +52,7 @@ git add .gitattributes
 Please note that adding a file type to be tracked by git lfs doesn't mean that all 
 the pre-existing files with that type that are already commited will be tracked. Use **git lfs migrate** to migrate those files to LFS. This is strange as we naturally expect git lfs to start tracking all the files in the repo with the given extension. Hope this will be updated in the future.
 
-Step 3:
+### Step 3:
 Once you add the files to be tracked you can continue adding. commiting and pushing changes to git as you would normally do.
 
 ```bash
