--- a/_posts/2022-10-27-hugghub.md
+++ b/_posts/2022-10-27-hugghub.md
@@ -25,7 +25,7 @@ git lfs install
 ```
 
 ### Step 2:
-tell git lfs which are the files that needs to be tracked. In our case we need to track the pytorch model file(s) with extension ".pt" Either you can directly edit .gitattributes as below.
+tell git lfs which are the files that needs to be tracked. In our case we need to track the pytorch model file(s) with extension *".pt"* Either you can directly edit *.gitattributes* as below.
 
 ```gitattributes
 # Model files
@@ -34,7 +34,7 @@ tell git lfs which are the files that needs to be tracked. In our case we need t
 ```
 
 
-So here I've added *.pt and *.pth file extension for pytorch model file types I want to be controlled by Git LFS. The options added in the line tells git that I want to filter, diff and merge using the LFS tool and finally the -text argument tells Git that this is not a text file, which i think is a weird way to tell it that it's a binary file.
+So here I've added *"\*.pt"* and *"\*.pth"* file extension for pytorch model file types I want to be controlled by Git LFS. The options added in the line tells git that I want to filter, diff and merge using the LFS tool and finally the -text argument tells Git that this is not a text file, which i think is a weird way to tell it that it's a binary file.
 
 or you can use the following git lfs command to do the same.
 
