--- a/_posts/2022-10-27-lfs.md
+++ b/_posts/2022-10-27-lfs.md
@@ -3,7 +3,7 @@ layout: post
 title: How to upload and version your model files using github
 date: 2022-10-27 15:12
 summary: Model files are usually larger than 100MB filesize allowed by github, this tutorial will show you how to upload your large model file to github with versioning using git lfs.
-categories: Model versioning, Deep learning, Git
+categories: General
 ---
 
 ## How to upload and version your model files using github
