trying visitor badge

--- a/_posts/2022-10-27-lfs.md
+++ b/_posts/2022-10-27-lfs.md
@@ -64,3 +64,5 @@ git push origin main
 You are all done. LFS can version large files  with git. Not just that - it makes your syncing much faster with the same git workflow. Cool!
 
 But do keep in mind that if you upload a lot of large files to github in such a way that it affects github performance, they will be sending you a mail to do some cleanup. So keep your repository size as minimal as possible.
+
+![visitor badge](https://visitor-badge.glitch.me/badge?page_id=https://codeslord.github.io/general/2022/10/27/lfs/)
