--- a/_posts/2022-10-27-lfs.md
+++ b/_posts/2022-10-27-lfs.md
@@ -65,4 +65,4 @@ You are all done. LFS can version large files  with git. Not just that - it make
 
 But do keep in mind that if you upload a lot of large files to github in such a way that it affects github performance, they will be sending you a mail to do some cleanup. So keep your repository size as minimal as possible.
 
-![visitor badge](https://visitor-badge.glitch.me/badge?page_id=https://codeslord.github.io/general/2022/10/27/lfs/)
+<!-- ![visitor badge](https://visitor-badge.glitch.me/badge?page_id=https://codeslord.github.io/general/2022/10/27/lfs/) -->
