--- a/_posts/2023-01-03-pytest.md
+++ b/_posts/2023-01-03-pytest.md
@@ -6,8 +6,6 @@ summary: Pytest is the battle tested tool to test complex python programs with r
 categories: General
 ---
 
-# How to write better programs in python with pytest
-
 <img title="a title" alt="LFS" src="https://i.imgur.com/o4MohzO.jpg">
 
 Testing is an essential part of software development. It helps us ensure that our code is correct, reliable, and maintainable. Pytest is a popular testing framework for Python that makes it easy to write and run unit tests.
@@ -20,14 +18,14 @@ So let's get started!
 
 ## Steps
 
-### 1.Install pytest:
+### 1. Install pytest:
 To install pytest, you can use pip:
 
 ```bash
 pip install pytest
 ```
 
-### 2.Write your tests:
+### 2. Write your tests:
 Tests in pytest are simply functions that start with the word "test". Here is an example test function that checks if a list is empty:
 
 ```python
@@ -37,12 +35,12 @@ def test_list_is_empty():
 
 You can have as many test functions as you want in a file. It's a good practice to have one test file for each module or function you want to test.
 
-### 3.Test discovery:
+### 3. Test discovery:
 By default, pytest will look for test files in the current directory and its subdirectories, and for test functions inside those files. Test files are files that match the pattern "test_.py" or "_test.py", and test functions are functions that start with the word "test".
 
 You can customize this behavior by using the -k option to specify a pattern for test functions, or the -p option to specify a plugin for discovering tests.
 
-### 4.Run your tests:
+### 4. Run your tests:
 To run your tests, you can use the pytest command followed by the name of the test file or directory:
 
 ```bash
@@ -72,7 +70,7 @@ def test_sum_function():
     assert sum([1, 2, 3]) == 6
 ```
 
-### 6.Fixtures:
+### 6. Fixtures:
 Fixtures are functions that are used to set up test dependencies. They are decorated with the @pytest.fixture decorator, and they can be passed as arguments to test functions.
 
 Here is an example of a fixture that creates a list:
@@ -106,9 +104,9 @@ def test_list_length(my_list(length=3)):
 ```
 
 
-## Here are some more examples of tests using pytest:
+## Here are some example tests using pytest:
 
-### 1.Testing function arguments:
+### 1. Testing function arguments:
 You can use pytest to test that a function is correctly handling its arguments. For example, consider the following function that calculates the area of a rectangle:
 
 ```python
@@ -129,7 +127,7 @@ def test_rectangle_area():
     assert rectangle_area(2, -3) == 6
 ```
 
-### 2.Testing edge cases:
+### 2. Testing edge cases:
 It's a good idea to test your functions with edge cases, such as maximum or minimum values, empty input, or input with a large number of elements.
 
 For example, you can test the rectangle_area function with a very large value for the width and height:
@@ -141,7 +139,7 @@ def test_rectangle_area_edge_cases():
     assert rectangle_area(10**6, -10**6) == 10**12
 ```
 
-### 3.Testing exceptions:
+### 3. Testing exceptions:
 You can use pytest to test that a function is correctly raising an exception under certain conditions. To do this, you can use the pytest.raises function as a context manager.
 
 For example, consider the following function that calculates the square root of a number:
@@ -161,7 +159,7 @@ def test_square_root():
         square_root(-1)
 ```
 
-### 4.Testing multiple outputs:
+### 4. Testing multiple outputs:
 You can use pytest to test that a function is correctly returning multiple outputs. To do this, you can use the pytest.approx function to compare the outputs to the expected values.
 
 For example, consider the following function that calculates the roots of a quadratic equation:
@@ -212,7 +210,7 @@ tests/
         test_update_user.py
         test_delete_user.py
 
-### 2.Use descriptive names for test files and test functions:
+### 2. Use descriptive names for test files and test functions:
 It's a good idea to use descriptive names for your test files and test functions. This can make it easier to understand the purpose of each test and identify which tests need to be run in a given situation.
 
 For example, you can use the name of the function or module being tested as the prefix for the test file or test function name. For example:
@@ -232,7 +230,7 @@ def test_add_positive_and_negative_numbers():
     ...
 ```
 
-### 3.Use fixtures to reduce duplication:
+### 3. Use fixtures to reduce duplication:
 Fixtures are functions that are used to set up test dependencies. They can be used to reduce duplication in your tests and make them easier to maintain.
 
 For example, consider the following test function that tests the create_user function:
