Minor updates to posts

--- a/_posts/2023-01-03-pytest.md
+++ b/_posts/2023-01-03-pytest.md
@@ -198,7 +198,7 @@ It's a good idea to group your tests by the functionality they are testing. This
 
 For example, you can create a tests directory at the root of your repository, and inside it create subdirectories for each module or component you want to test. For example:
 
-Copy code
+```bash
 tests/
     calculator/
         test_add.py
@@ -209,6 +209,7 @@ tests/
         test_create_user.py
         test_update_user.py
         test_delete_user.py
+```
 
 ### 2. Use descriptive names for test files and test functions:
 It's a good idea to use descriptive names for your test files and test functions. This can make it easier to understand the purpose of each test and identify which tests need to be run in a given situation.
