Added more content

--- a/_posts/2023-01-03-pytest1.md
+++ b/_posts/2023-01-03-pytest1.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: How to write better programs in python with pytest
+title: How to write better programs in Python with Pytest - Part 1
 date: 2023-01-03 10:00
 summary: Pytest is the battle tested tool to test complex python programs with relative ease
 categories: General
@@ -261,10 +261,80 @@ def test_create_user(user_data):
 
 This test function is now more concise and easier to read, and the test data is separated from the test logic.
 
+### 3. Create tests to ensure Condition Coverage
 
+Condition coverage/Predicate Coverage is a measure of how well the tests are exercising the different combinations of conditions in the code. It is a type of structural coverage that focuses on the control flow of the code.
 
+To test different combinations of conditions, you can use test cases with different input values that will exercise the different combinations of conditions in the code.
 
+For example, consider the following function that calculates the discount for a purchase based on the total amount and the customer's loyalty status:
 
+```python
+def calculate_discount(amount: float, loyalty_status: str) -> float:
+    if amount > 100:
+        discount = 0.1
+    elif amount > 50:
+        discount = 0.05
+    else:
+        discount = 0.0
+    
+    if loyalty_status == "gold":
+        discount += 0.05
+    elif loyalty_status == "silver":
+        discount += 0.03
+    
+    return amount * discount
+```
 
+To test different combinations of conditions, you can write test cases with different input values that will exercise the different conditions in the code. To test the else clause in a conditional statement, you can write a test case with input values that will not satisfy any of the conditions in the if or elif clauses.
 
+```python
+def test_calculate_discount():
+    # Test amount > 100 and loyalty_status == "gold"
+    assert calculate_discount(110, "gold") == 11.5
+    
+    # Test amount > 50 and loyalty_status == "silver"
+    assert calculate_discount(60, "silver") == 3.9
+    
+    # Test amount <= 50 and loyalty_status == "bronze"
+    assert calculate_discount(40, "bronze") == 0.0
+```
 
+### 4. Test one thing at a time
+
+Unit tests should test one thing at a time. This means that each test should only test a single unit of code, such as a function or method. This makes it easier to understand the purpose of each test and identify which tests need to be run in a given situation.
+
+### 5. Test for expected outcomes
+
+Unit tests should test for expected outcomes. This means that you should test that your code is producing the correct output, rather than testing the implementation details.
+
+## Evaluating Tests
+
+How do you know whether you have tested it enough. Even though there is no Universal standard for this, there are several metrics that can help developers understand if they have done their unit testing well. 
+
+### 1. Risk assessment
+
+Risk assessment can help you determine which areas of the code are most critical and need more testing. You can identify the areas of the code that are most important to the project, or that have the highest potential for failure, and focus your testing efforts on those areas. Testing can sometimes be a time consuming process, so make sure you prioritize what to test first before you jump into code coverage.
+
+### 2. Code coverage
+
+Code coverage is a measure of how much of the code is being tested by the unit tests. A high code coverage means that a large portion of the code is being tested, which can provide, uptp a certain extent, confidence that the code is working as expected.
+
+To measure code coverage, you can use a tool like [coverage.py](https://coverage.readthedocs.io/en/7.0.2/) or [pytest-cov](https://pytest-cov.readthedocs.io/en/latest/). These tools can run your tests and generate a report showing which lines of code are being covered by the tests.
+
+### 3. Test duration
+
+The duration of the unit tests is an important metric, as it can indicate how long it takes to run the tests and how long it takes to get feedback on the code changes. Long-running tests can slow down the development process and make it harder to get feedback on code changes.
+
+### 4. Test stability
+
+Test stability is a measure of how consistently the tests pass or fail. Stable tests are expected to pass or fail consistently, while unstable tests may pass or fail randomly. Unstable tests can be hard to debug and can reduce confidence in the test suite.
+
+To measure test stability, you can run the tests multiple times and track the pass/fail rate. You can also use tools like pytest-rerunfailures to automatically rerun failed tests and check if they are stable.
+
+### 5. Test maintainability:
+Test maintainability is a measure of how easy it is to update and maintain the tests over time. Maintainable tests are easy to understand and modify, while hard-to-maintain tests may require a lot of effort to update and may be prone to breaking when the code changes.
+
+To measure test maintainability, you can track the time and effort required to update the tests and the frequency of test breaks due to code changes. You can also use practices like writing descriptive test names and using fixtures to reduce duplication and improve maintainability.
+
+Part 2: How to use Pytest in VSCode
