--- a/_posts/2023-01-03-pytest1.md
+++ b/_posts/2023-01-03-pytest1.md
@@ -310,7 +310,7 @@ Unit tests should test for expected outcomes. This means that you should test th
 
 ## Evaluating Tests
 
-How do you know whether you have tested it enough. Even though there is no Universal standard for this, there are several metrics that can help developers understand if they have done their unit testing well. 
+How do you know whether you have tested your code enough. Even though there is no Universal standard for this, there are several metrics that can help developers understand if they have done their unit testing well. 
 
 ### 1. Risk assessment
 
@@ -332,7 +332,7 @@ Test stability is a measure of how consistently the tests pass or fail. Stable t
 
 To measure test stability, you can run the tests multiple times and track the pass/fail rate. You can also use tools like pytest-rerunfailures to automatically rerun failed tests and check if they are stable.
 
-### 5. Test maintainability:
+### 5. Test maintainability
 Test maintainability is a measure of how easy it is to update and maintain the tests over time. Maintainable tests are easy to understand and modify, while hard-to-maintain tests may require a lot of effort to update and may be prone to breaking when the code changes.
 
 To measure test maintainability, you can track the time and effort required to update the tests and the frequency of test breaks due to code changes. You can also use practices like writing descriptive test names and using fixtures to reduce duplication and improve maintainability.
