--- a/_drafts/2023-01-15-pytest2.md
+++ b/_drafts/2023-01-15-pytest2.md
@@ -1,29 +1,24 @@
 ---
 layout: post
-title: How to write better programs in Python with Pytest - Part 1
+title: How to write better programs in Python with Pytest - Part 2
 date: 2023-01-03 10:00
-summary: Pytest is the battle tested tool to test complex python programs with relative ease
+summary: How to use Pytest in VSCode
 categories: General
 ---
 
-<img title="a title" alt="LFS" src="https://i.imgur.com/o4MohzO.jpg">
+<img title="pyetst 2" alt="titleimage" src="https://i.imgur.com/zGqUCZV.png">
 
-Testing is an essential part of software development. It helps us ensure that our code is correct, reliable, and maintainable. Pytest is a popular testing framework for Python that makes it easy to write and run unit tests.
+Visual Studio Code (VSCode) is a code editor that has built in support for running and debugging Python Tests. So you can write and run your tests without leaving your code editor.
 
-In this tutorial, you will learn how to use pytest to test your Python code. You will start by installing pytest and writing your first test. Then, you will learn how to use assertions to check the output of your code, and how to use fixtures to set up test dependencies. You will also learn how to test exceptions, multiple outputs, and edge cases.
+## Prerequisites
 
-By the end of this tutorial, you will be able to use pytest to test your Python code with confidence, knowing that your code is reliable and working as expected.
-
-So let's get started!
+This tutorial assumes that you have Python and vscode installed on your computer. Also within VSCode you need to have the Python extension(official microsoft version) installed.
 
 ## Steps
 
-### 1. Install pytest:
-To install pytest, you can use pip:
+### 1. Configure Pytest in VSCode
 
-```bash
-pip install pytest
-```
+Once you have opened a Python porject in VSCode a test beaker icon will be displayed in the activity bar. Clicking this icon opens the Python Test Explorer view. Initially if you see a Configure python tests button that means you don't have python test framework enabled. 
 
 ### 2. Write your tests:
 Tests in pytest are simply functions that start with the word "test". Here is an example test function that checks if a list is empty:
