--- a/_posts/2023-01-27-logstash.md
+++ b/_posts/2023-01-27-logstash.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Python Logging: Configuring and Pushing logs to logstash 
+title: Realtime Python Logging with logstash
 date: 2023-01-27 15:12
 summary: Logging is very important when it comes to monitoring and debugging your application. Setting up logging the correct way can save a lot of development hours and making this log available in a searchable fashion in the cloud is essential.
 categories: General
