--- a/_posts/2023-02-10-cossim.md
+++ b/_posts/2023-02-10-cossim.md
@@ -6,7 +6,7 @@ summary: This tutorial explains how to use the Hugging Face Transformers library
 categories: General
 ---
 
-<img title="a title" alt="LFS" src="https://i.imgur.com/5CbvY5x.jpg">
+<img title="a title" alt="LFS" src="https://i.imgur.com/mgfWtPz.png">
 
 
 In this tutorial I am going to explain how you can set compare text for similarity using Cosine Similarity between transformer embeddings.
@@ -87,6 +87,7 @@ cosine_similarity = nn.CosineSimilarity(dim=0)
 ```python
 text_similarity = cosine_similarity(output_embedding1, output_embedding2)
 ```
+When using the cosine similarity function from the torch.nn library, a similarity score closer to one indicates higher similarity between the two texts, with a score of one indicating that the texts are identical. However, if a different cosine similarity function such as the one from scipy is used, a similarity score of zero indicates identical texts, and the closer the score is to zero, the higher the similarity between the two texts.
 
 And we are done! We have used Hugging Face Transformers and PyTorch to find the similarity between two sentences.
 
