--- a/_posts/2023-02-10-cossim.md
+++ b/_posts/2023-02-10-cossim.md
@@ -2,7 +2,7 @@
 layout: post
 title: Finding Text Similarity using Huggingface Transformers and PyTorch
 date: 2023-02-10 17:31
-summary: This tutorial explains how to use the Hugging Face Transformers library and PyTorch to find the similarity between two texts. This is interesting as well as necessary for many computational tasks involving text.
+summary: This tutorial explains how to use the Hugging Face Transformers library and PyTorch to find the similarity between two texts. This is interesting as well as necessary for many computational tasks involving text such as information retrieval systems and question answering systems.
 categories: General
 ---
 
