--- a/_posts/2023-02-10-cossim.md
+++ b/_posts/2023-02-10-cossim.md
@@ -33,6 +33,12 @@ tokenizer = BertTokenizer.from_pretrained('bert-base-uncased')
 In this step, the two input texts, text1 and text2, are tokenized using the tokenizer instance created in Step 1. The padding and truncation arguments are set to True and we are going to return pytorch tensors. We use padding and truncation to ensure that the input tensors have the same shape and can be passed to the BERT model.
 
 ```python
+# Example sentences
+text1 = "John likes to eat apples and oranges for breakfast."
+text2 = "John likes to eat pancakes for breakfast."
+```
+
+```python
 input1 = tokenizer(text1, padding=True, truncation=True, return_tensors='pt')
 ```
 
@@ -73,20 +79,23 @@ output_embedding2 = out2.last_hidden_state.mean(dim=1)
 ### Step 5:
 
 Finally, we import the *nn.CosineSimilarity* class from PyTorch and create an instance of it. We then pass the embeddings obtained in Step 4 to the *cosine_similarity()* method of the nn.CosineSimilarity instance to obtain the cosine similarity between the two input texts, which represents their similarity.
-Please note that you might need to adjust your *dim* argument based on the model/embedding. For example for BART model the dim will be 1.
+Please note that you might need to adjust your *dim* argument based on the model/embedding. For example for BERT model the dim will be 1.
 
 ```python
 import torch.nn as nn
 ```
 
 ```python
-cosine_similarity = nn.CosineSimilarity(dim=0)
+cosine_similarity = nn.CosineSimilarity(dim=1)
 ```
 
 
 ```python
 text_similarity = cosine_similarity(output_embedding1, output_embedding2)
 ```
+
+For the given example, text_similarity will output *tensor([0.8963])* which tells us that the given sentences are 89.63% similar.
+
 When using the cosine similarity function from the torch.nn library, **a similarity score closer to one indicates higher similarity between the two texts, with a score of one indicating that the texts are identical.** However, if a different cosine similarity function such as the one from scipy is used, a similarity score of zero indicates identical texts, and the closer the score is to zero, the higher the similarity between the two texts.
 
 And we are done! We have used Hugging Face Transformers and PyTorch to find the similarity between two sentences.
