--- a/_posts/2023-02-10-cossim.md
+++ b/_posts/2023-02-10-cossim.md
@@ -9,7 +9,7 @@ categories: General
 <img title="a title" alt="LFS" src="https://i.imgur.com/mgfWtPz.png">
 
 
-In this tutorial I am going to explain how you can set compare text for similarity using Cosine Similarity between transformer embeddings.
+In this tutorial, I will show you how to compare two texts for similarity using Cosine Similarity between transformer embeddings. By leveraging the power of Hugging Face Transformers and PyTorch, we will be able to quickly and accurately determine the degree of similarity between two pieces of text.
 
 >Prerequisites:
 Python, PyTorch, Transformers
