--- a/_posts/2023-03-14-nccl.md
+++ b/_posts/2023-03-14-nccl.md
@@ -26,23 +26,25 @@ Other examples of distributed training backends are [Gloo](https://github.com/fa
 
 ### Installing NCCL
 
-1. Visit the NCCL [download page](https://developer.nvidia.com/nccl/nccl-download).
+1. **Visit the NCCL [download page](https://developer.nvidia.com/nccl/nccl-download).**
 
-2. Download the .tar xz  (txz) file, which is OS-agnostic.
+2. **Download the .tar xz  (txz) file, which is OS-agnostic.**
 
-3. Extract the file. For NCCL 2.17.1 and CUDA 11.x, the tar file name is **nccl_2.17.1-1+cuda11.0_x86_64.txz.**
+3. **Extract the file. For NCCL 2.17.1 and CUDA 11.x, the tar file name is *nccl_2.17.1-1+cuda11.0_x86_64.txz.***
 
 ```bash
 tar -xvf nccl_2.17.1-1+cuda11.0_x86_64.txz
 ```
 
-4. Copy the extracted files to /usr/local:
+4. **Copy the extracted files to /usr/local**:
+
 ```bash
 sudo mkdir -p /usr/local/nccl-2.1
 sudo cp -vRf nccl_2.17.1-1+cuda11.0_x86_64/* /usr/local/nccl-2.1
 ```
 
-5. Update LD_LIBRARY_PATH to include the NCCL library:
+5. **Update LD_LIBRARY_PATH to include the NCCL library**:
+
 
 ```bash
 cd ~
@@ -50,21 +52,25 @@ echo 'export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/usr/local/nccl-2.1/lib' >> ~/.bas
 source .bashrc
 ```
 
-6. Create a symbolic link to the header file:
+6. **Create a symbolic link to the header file**:
+
 
 ```bash
 sudo ln -s /usr/local/nccl-2.1/include/nccl.h /usr/include/nccl.h
 ```
 
-7. Specify the network interface that should be used by NCCL: 
+7. **Specify the network interface that should be used by NCCL**: 
+
 
 You can use **'ifconfig'** command to find out your network interface.
+
 
 ```bash
 echo 'export NCCL_SOCKET_IFNAME=eth0' >> ~/.bashrc
 ```
 
-8. Update the /etc/hosts file with the IP addresses of the GPU instances:
+8. **Update the /etc/hosts file with the IP addresses of the GPU instances**:
+
 
 ```bash
 sudo vi /etc/hosts
@@ -73,19 +79,10 @@ sudo vi /etc/hosts
 192.1.2.4 gpu-instance-2
 ```
 
-9. Set environment variables for each instance:
+9. **Set environment variables for each instance**:
 
-Instance 1:
 
-```bash
-export MASTER_ADDR=gpu-instance-1
-export MASTER_PORT=9494
-export LOCAL_RANK=0
-export HOST_NODE_ADDR=192.2.4.90:29400
-export WORLD_SIZE=2
-```
-
-Instance 2:
+*Instance 1*:
 
 ```bash
 export MASTER_ADDR=gpu-instance-1
@@ -95,17 +92,29 @@ export HOST_NODE_ADDR=192.2.4.90:29400
 export WORLD_SIZE=2
 ```
 
-10. Open the necessary ports
+*Instance 2*:
 
-11. Start training on each instance using torchrun: 
+```bash
+export MASTER_ADDR=gpu-instance-1
+export MASTER_PORT=9494
+export LOCAL_RANK=0
+export HOST_NODE_ADDR=192.2.4.90:29400
+export WORLD_SIZE=2
+```
+
+10. **Open the necessary ports**
+
+11. **Start training on each instance using torchrun**:
+
 > Please note that `torch.distributed.launch` is deprecated.
 
-Instance 1:
+*Instance 1*:
 
 ```bash
 torchrun --nnodes=2 --nproc_per_node=1 --node_rank=0 --rdzv_id=456 --rdzv_endpoint=$HOST_NODE_ADDR train.py
 ```
-Instance 2:
+
+*Instance 2*:
 
 ```bash
 torchrun --nnodes=2 --nproc_per_node=1 --node_rank=1 --rdzv_id=456 --rdzv_endpoint=$HOST_NODE_ADDR train.py
@@ -121,7 +130,9 @@ First, install the required packages:
 ```bash
 pip install transformers datasets
 ```
+
 trainer.py
+
 
 ```python
 import os
