--- a/_posts/2023-03-14-nccl.md
+++ b/_posts/2023-03-14-nccl.md
@@ -36,14 +36,15 @@ Other examples of distributed training backends are [Gloo](https://github.com/fa
 tar -xvf nccl_2.17.1-1+cuda11.0_x86_64.txz
 ```
 
-4. **Copy the extracted files to /usr/local**:
+4.  **Copy the extracted files to /usr/local**
+
 
 ```bash
 sudo mkdir -p /usr/local/nccl-2.1
 sudo cp -vRf nccl_2.17.1-1+cuda11.0_x86_64/* /usr/local/nccl-2.1
 ```
 
-5. **Update LD_LIBRARY_PATH to include the NCCL library**:
+5. **Update LD_LIBRARY_PATH to include the NCCL library**
 
 
 ```bash
@@ -52,14 +53,14 @@ echo 'export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/usr/local/nccl-2.1/lib' >> ~/.bas
 source .bashrc
 ```
 
-6. **Create a symbolic link to the header file**:
+6. **Create a symbolic link to the header file**
 
 
 ```bash
 sudo ln -s /usr/local/nccl-2.1/include/nccl.h /usr/include/nccl.h
 ```
 
-7. **Specify the network interface that should be used by NCCL**: 
+7. **Specify the network interface that should be used by NCCL**
 
 
 You can use **'ifconfig'** command to find out your network interface.
@@ -69,7 +70,7 @@ You can use **'ifconfig'** command to find out your network interface.
 echo 'export NCCL_SOCKET_IFNAME=eth0' >> ~/.bashrc
 ```
 
-8. **Update the /etc/hosts file with the IP addresses of the GPU instances**:
+8. **Update the /etc/hosts file with the IP addresses of the GPU instances**
 
 
 ```bash
@@ -79,7 +80,7 @@ sudo vi /etc/hosts
 192.1.2.4 gpu-instance-2
 ```
 
-9. **Set environment variables for each instance**:
+9. **Set environment variables for each instance**
 
 
 *Instance 1*:
@@ -104,7 +105,7 @@ export WORLD_SIZE=2
 
 10. **Open the necessary ports**
 
-11. **Start training on each instance using torchrun**:
+11. **Start training on each instance using torchrun**
 
 > Please note that `torch.distributed.launch` is deprecated.
 
