--- a/_posts/2023-03-14-nccl.md
+++ b/_posts/2023-03-14-nccl.md
@@ -107,16 +107,14 @@ Other examples of distributed training backends are [Gloo](https://github.com/fa
 10. **Open the necessary ports**
 
 11. **Start training on each instance using torchrun**
+    > Please note that `torch.distributed.launch` is deprecated.
 
-> Please note that `torch.distributed.launch` is deprecated.
-
-    *Instance 1*:
+    _Instance 1_:
 
     ```bash
     torchrun --nnodes=2 --nproc_per_node=1 --node_rank=0 --rdzv_id=456 --rdzv_endpoint=$HOST_NODE_ADDR train.py
     ```
-
-    *Instance 2*:
+    _Instance 2_:
 
     ```bash
     torchrun --nnodes=2 --nproc_per_node=1 --node_rank=1 --rdzv_id=456 --rdzv_endpoint=$HOST_NODE_ADDR train.py
