--- a/_posts/2023-06-27-prompts.md
+++ b/_posts/2023-06-27-prompts.md
@@ -2,7 +2,7 @@
 layout: post
 title: ChatGPT prompts for developers
 date: 2023-06-27 20:14
-summary: Prompts and explanation to work with openai chatgpt completion api
+summary: Prompts and explanation to work with openai chatgpt completion api. These use cases demonstrate the versatility of ChatGPT and the potential it holds for streamlining and automating various tasks in software development.
 categories: General
 ---
 
