--- a/_posts/2023-07-14-poetry.md
+++ b/_posts/2023-07-14-poetry.md
@@ -19,7 +19,10 @@ Python Poetry is a powerful tool and package manager for Python that simplifies 
 4. Installing Dependencies
 5. Packaging the Project
 6. Publishing to PyPI
-7. Managing Virtual Environments
+7. Removing Dependencies
+8. Managing Poetry Virtual Environments
+9. Containerize with Poetry
+
 
 ## 1. Installing Python Poetry
 
@@ -292,7 +295,7 @@ pip uninstall package_name
 
 Replace `package_name` with the name of the package you want to uninstall. Be cautious while using `pip` to avoid accidentally removing essential packages.
 
-## 9. Containerizing a FastAPI app written in poetry
+## 9. Containerize with Poetry - Dockerize a FastAPI app
 
 Below is a sample Dockerfile for a Python project that uses Poetry for dependency management to run a FastAPI app. Ensure you have a FastAPI app in your project directory with the appropriate requirements for running the app.
 
